--- a/单次跟单列表.html
+++ b/单次跟单列表.html
@@ -2069,7 +2069,7 @@
         <div id="u1033" class="ax_default table_cell">
           <img id="u1033_img" class="img " src="images/单次跟单列表/u1031.png"/>
           <div id="u1033_text" class="text ">
-            <p><span>交易金额</span></p>
+            <p><span>买入金额</span></p>
           </div>
         </div>
 
