--- a/多次跟单列表.html
+++ b/多次跟单列表.html
@@ -2356,7 +2356,7 @@
         <div id="u1500" class="ax_default table_cell">
           <img id="u1500_img" class="img " src="images/多次跟单列表/u1498.png"/>
           <div id="u1500_text" class="text ">
-            <p><span>交易金额</span></p>
+            <p><span>买入金额</span></p>
           </div>
         </div>
 
