--- a/人工充值-前端.html
+++ b/人工充值-前端.html
@@ -106,7 +106,7 @@
       <div id="u1676" class="ax_default label">
         <div id="u1676_div" class=""></div>
         <div id="u1676_text" class="text ">
-          <p><span>人工充值</span></p>
+          <p><span>VIP1</span></p>
         </div>
       </div>
 
@@ -146,7 +146,31 @@
       <div id="u1681" class="ax_default _三级标题">
         <div id="u1681_div" class=""></div>
         <div id="u1681_text" class="text ">
-          <p><span>用户输入对应渠道密码后，进入本界面</span></p>
+          <p><span>用户输入对应渠道密码后，进入本界面，渠道名称显示</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1682" class="ax_default box_1">
+        <div id="u1682_div" class=""></div>
+        <div id="u1682_text" class="text ">
+          <p style="text-align:center;"><span>账户信息：</span></p><p style="text-align:left;"><span>&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 户名：</span></p><p style="text-align:left;"><span>&nbsp;&nbsp; &nbsp; &nbsp; 卡号：<br>&nbsp; &nbsp; &nbsp; &nbsp; 银行：</span></p><p style="text-align:left;"><span>&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 分行：</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1683" class="ax_default _三级标题">
+        <div id="u1683_div" class=""></div>
+        <div id="u1683_text" class="text ">
+          <p><span>由后台填写上传</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1684" class="ax_default button">
+        <div id="u1684_div" class=""></div>
+        <div id="u1684_text" class="text ">
+          <p><span>复制</span></p>
         </div>
       </div>
     </div>
