--- a/新增股票列表.html
+++ b/新增股票列表.html
@@ -49,187 +49,165 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u1902" class="ax_default _段落">
-        <div id="u1902_div" class=""></div>
-        <div id="u1902_text" class="text ">
+      <div id="u1853" class="ax_default _段落">
+        <div id="u1853_div" class=""></div>
+        <div id="u1853_text" class="text ">
           <p><span>User Story：股票过了打新期，我要让客户今天打，或者这个股票明天上市，我说我们今天给客户打新，然后股票默认是系统价格，但是我们可以改价格，股票需要也可以写</span></p>
         </div>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u1903" class="ax_default _图片">
-        <img id="u1903_img" class="img " src="images/新增股票列表/u1903.png"/>
-        <div id="u1903_text" class="text " style="display:none; visibility: hidden">
+      <div id="u1854" class="ax_default _图片">
+        <img id="u1854_img" class="img " src="images/新增股票列表/u1854.png"/>
+        <div id="u1854_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1904" class="ax_default _三级标题">
-        <div id="u1904_div" class=""></div>
-        <div id="u1904_text" class="text ">
+      <div id="u1855" class="ax_default _三级标题">
+        <div id="u1855_div" class=""></div>
+        <div id="u1855_text" class="text ">
           <p><span>搜索股票后，股票名称和现价自动填充</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1905" class="ax_default _三级标题">
-        <div id="u1905_div" class=""></div>
-        <div id="u1905_text" class="text ">
+      <div id="u1856" class="ax_default _三级标题">
+        <div id="u1856_div" class=""></div>
+        <div id="u1856_text" class="text ">
           <p><span>打新价格、发行股数为前端展示价格</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1906" class="ax_default _三级标题">
-        <div id="u1906_div" class=""></div>
-        <div id="u1906_text" class="text ">
+      <div id="u1857" class="ax_default _三级标题">
+        <div id="u1857_div" class=""></div>
+        <div id="u1857_text" class="text ">
           <p><span>开始-指该股票打新开始时间</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1907" class="ax_default box_2">
-        <img id="u1907_img" class="img " src="images/新增股票列表/u1907.svg"/>
-        <div id="u1907_text" class="text " style="display:none; visibility: hidden">
+      <div id="u1858" class="ax_default box_2">
+        <img id="u1858_img" class="img " src="images/新增股票列表/u1858.svg"/>
+        <div id="u1858_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1908" class="ax_default _三级标题">
-        <div id="u1908_div" class=""></div>
-        <div id="u1908_text" class="text ">
-          <p><span>批量写入平仓单</span></p>
+      <div id="u1859" class="ax_default _三级标题">
+        <div id="u1859_div" class=""></div>
+        <div id="u1859_text" class="text ">
+          <p><span>写入申购股票</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1909" class="ax_default label">
-        <div id="u1909_div" class=""></div>
-        <div id="u1909_text" class="text ">
+      <div id="u1860" class="ax_default label">
+        <div id="u1860_div" class=""></div>
+        <div id="u1860_text" class="text ">
           <p><span>股票：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u1910" class="ax_default text_field">
-        <div id="u1910_div" class=""></div>
-        <input id="u1910_input" type="text" value="中远" class="u1910_input"/>
+      <div id="u1861" class="ax_default text_field">
+        <div id="u1861_div" class=""></div>
+        <input id="u1861_input" type="text" value="中远" class="u1861_input"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1911" class="ax_default button">
-        <div id="u1911_div" class=""></div>
-        <div id="u1911_text" class="text ">
+      <div id="u1862" class="ax_default button">
+        <div id="u1862_div" class=""></div>
+        <div id="u1862_text" class="text ">
           <p><span>取消</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1912" class="ax_default button">
-        <div id="u1912_div" class=""></div>
-        <div id="u1912_text" class="text ">
+      <div id="u1863" class="ax_default button">
+        <div id="u1863_div" class=""></div>
+        <div id="u1863_text" class="text ">
           <p><span>确认</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1913" class="ax_default label">
-        <div id="u1913_div" class=""></div>
-        <div id="u1913_text" class="text ">
+      <div id="u1864" class="ax_default label">
+        <div id="u1864_div" class=""></div>
+        <div id="u1864_text" class="text ">
           <p><span>股票名称：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u1914" class="ax_default text_field">
-        <div id="u1914_div" class=""></div>
-        <input id="u1914_input" type="text" value="中远海空" class="u1914_input"/>
+      <div id="u1865" class="ax_default text_field">
+        <div id="u1865_div" class=""></div>
+        <input id="u1865_input" type="text" value="中远海空" class="u1865_input"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1915" class="ax_default label">
-        <div id="u1915_div" class=""></div>
-        <div id="u1915_text" class="text ">
+      <div id="u1866" class="ax_default label">
+        <div id="u1866_div" class=""></div>
+        <div id="u1866_text" class="text ">
           <p><span>打新价格：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u1916" class="ax_default text_field">
-        <div id="u1916_div" class=""></div>
-        <input id="u1916_input" type="text" value="9.00" class="u1916_input"/>
+      <div id="u1867" class="ax_default text_field">
+        <div id="u1867_div" class=""></div>
+        <input id="u1867_input" type="text" value="9.00" class="u1867_input"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1917" class="ax_default label">
-        <div id="u1917_div" class=""></div>
-        <div id="u1917_text" class="text ">
+      <div id="u1868" class="ax_default label">
+        <div id="u1868_div" class=""></div>
+        <div id="u1868_text" class="text ">
           <p><span>开始时间：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u1918" class="ax_default text_field">
-        <div id="u1918_div" class=""></div>
-        <input id="u1918_input" type="text" value="2025.10.14 12:23:23" class="u1918_input"/>
+      <div id="u1869" class="ax_default text_field">
+        <div id="u1869_div" class=""></div>
+        <input id="u1869_input" type="text" value="2025.10.14 12:23:23" class="u1869_input"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1919" class="ax_default label">
-        <div id="u1919_div" class=""></div>
-        <div id="u1919_text" class="text ">
+      <div id="u1870" class="ax_default label">
+        <div id="u1870_div" class=""></div>
+        <div id="u1870_text" class="text ">
           <p><span>结束时间：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u1920" class="ax_default text_field">
-        <div id="u1920_div" class=""></div>
-        <input id="u1920_input" type="text" value="2025.10.17 13:30:32" class="u1920_input"/>
+      <div id="u1871" class="ax_default text_field">
+        <div id="u1871_div" class=""></div>
+        <input id="u1871_input" type="text" value="2025.10.17 13:30:32" class="u1871_input"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1921" class="ax_default label">
-        <div id="u1921_div" class=""></div>
-        <div id="u1921_text" class="text ">
+      <div id="u1872" class="ax_default label">
+        <div id="u1872_div" class=""></div>
+        <div id="u1872_text" class="text ">
           <p><span>现价：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u1922" class="ax_default text_field">
-        <div id="u1922_div" class=""></div>
-        <input id="u1922_input" type="text" value="9.00" class="u1922_input"/>
+      <div id="u1873" class="ax_default text_field">
+        <div id="u1873_div" class=""></div>
+        <input id="u1873_input" type="text" value="9.00" class="u1873_input"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1923" class="ax_default label">
-        <div id="u1923_div" class=""></div>
-        <div id="u1923_text" class="text ">
-          <p><span>发行总数：</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (文本框) -->
-      <div id="u1924" class="ax_default text_field">
-        <div id="u1924_div" class=""></div>
-        <input id="u1924_input" type="text" value="" class="u1924_input"/>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u1925" class="ax_default label">
-        <div id="u1925_div" class=""></div>
-        <div id="u1925_text" class="text ">
-          <p><span>万股</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u1926" class="ax_default _三级标题">
-        <div id="u1926_div" class=""></div>
-        <div id="u1926_text" class="text ">
+      <div id="u1874" class="ax_default _三级标题">
+        <div id="u1874_div" class=""></div>
+        <div id="u1874_text" class="text ">
           <p><span>结束-指该股票所有成功认缴转持仓单时间</span></p>
         </div>
       </div>
